aggiunta css e immagine per progetto fake

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -494,6 +494,10 @@ hr{
     background-image: url(../image/proj_covers/copertina-copy.png);
 }
 
+.img-fake{
+    background-image: url(../image/proj_covers/Fake-project.png);
+}
+
 /* ===========Contact Section===========*/
 
 
