--- a/assets/css/project_styles.css
+++ b/assets/css/project_styles.css
@@ -245,11 +245,34 @@
     border: 3px solid #ffff;
     border-radius: 30px;
     padding: 25px;
+    margin-top: 70px;
+}
+
+.stack-box p{
+margin-top: 3px;
+}
+
+.stack-box h4{
+    color: #cdee2b;
+}
+
+.tool-proj{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 10px;
+    
+}
+
+.tool-proj p{
+    font-size: clamp(0.75rem, 2vw, 1rem);
+    font-weight: 600;
+    margin-top: 6px;
+    
 }
 
 @media (max-width: 1024px) {
     .pj{
-        gap: 5rem;
+        gap: 0;
     }
 
     .proj-about{
