aggiunta pagina progetto html/css e inserito link nelle varie cards

--- a/assets/css/project_styles.css
+++ b/assets/css/project_styles.css
@@ -61,6 +61,11 @@
     width: fit-content;
     margin-right: 10px;
 }
+
+.tag-dev{
+    border: 2px #2b6fee solid ;
+}
+
 .contain-proj{
     flex-wrap: wrap;
     max-width: 1980px;
