--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -580,3 +580,31 @@ footer p{
 }
 
 
+/*============ thank you page ===============*/
+
+.end_section{
+    margin-top: 10vh ;
+}
+
+.thx{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    min-height: 300px;
+    height: 100%;
+    width: 100%;
+    
+    border-radius: 30px;
+    background-color: #101a62;
+    gap: 15px;
+}
+
+.thx a {
+    font-size: clamp(15px, 2vw, 20px);
+    background-color: #2b2b2b;
+    padding: 5px;
+    border-radius: 0.3rem;
+    border: 2px #ffffff solid;
+}
