--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,7 +153,7 @@ body {
 
 /* ========== Default Tipography & Styles ============= */
 
-h1{
+h1,.head1{
     font-size: clamp(35px, 5vw, 90px);
     font-weight: 800;
     line-height: normal;
