--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,7 +153,7 @@ body {
 
 /* ========== Default Tipography & Styles ============= */
 
-.head1,h1{
+h1{
     font-size: clamp(35px, 5vw, 90px);
     font-weight: 800;
     line-height: normal;
@@ -288,6 +288,11 @@ hr{
 
 /*=========== Hero Section ============*/
 
+.head1{
+    font-size: clamp(35px, 5vw, 90px);
+    font-weight: 800;
+    line-height: normal;
+}
 
 .hero-section{
     background: linear-gradient(0deg, rgba(27,27,27,1) 0%, rgba(16,26,98,1) 10%);;
